# ultra-trading-floor

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: OPERATING.md  SAFETY.md
examples/: paper_target_5.json
scripts/: check_pure_loc.ps1
src/dual_market_trader/: __main__.py  broker.py  chart_trades.py  charting.py  cli.py  config.py  dashboard.css  dashboard.py  dashboard_charts.py  dashboard_metrics.py  dashboard_tables.py  execution.py  improvement.py  live.py  live_cli.py  live_models.py  live_paper_cli.py  live_prices.py  market_data.py  models.py  reporting.py  sample_data.py  screener.py  screener_cli.py  strategies.py  strategy_pipeline.py  toss.py  validation.py
tests/: test_cli_e2e.py  test_dashboard_charts.py  test_dashboard_reporting.py  test_docs_safety.py  test_improvement.py  test_live.py  test_sample_data.py  test_screener.py  test_screener_cli.py  test_screener_dashboard.py  test_strategy_pipeline.py
